Fixed an issue where the navigation bar had the wrong z-index

--- a/src/Portfolio/Layout/HeaderBar.razor.css
+++ b/src/Portfolio/Layout/HeaderBar.razor.css
@@ -14,6 +14,10 @@
     height: calc(var(--sg) * 6);
 }
 
+.navigation-bar {
+    z-index: 1000;
+}
+
 .navigation-bar.toggled {
     display: block;
     transition: 0.3s;
